[package]
name = "rustffi"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["staticlib", "rlib"]

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[build-dependencies]
bindgen = "0.71.1"

[dependencies]
# Type aliases to C types like c_int for use with bindgen
# cty = "0.2.2"
embedded-hal = "1.0.0"
embedded-hal-async = { version = "1.0.0", optional = true }
num_enum = { version = "0.7.4", default-features = false }

[features]
default = []
async = ["embedded-hal-async"]
